--- a/package.json
+++ b/package.json
@@ -2,13 +2,14 @@
   "name": "package.json",
   "version": "0.0.0",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --port 3000",
     "build": "vite build",
     "preview": "vite preview --port 4173",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
   },
   "dependencies": {
     "@popperjs/core": "^2.11.6",
+    "axios": "^1.1.0",
     "bootstrap": "^5.2.2",
     "bootstrap-vue-3": "^0.3.11",
     "pinia": "^2.0.21",
