--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@popperjs/core": "^2.11.6",
+    "aos": "^2.3.4",
     "axios": "^1.1.0",
     "bootstrap": "^5.2.2",
     "bootstrap-vue-3": "^0.3.11",
