--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
   },
   "dependencies": {
+    "@meforma/vue-toaster": "^1.3.0",
     "@popperjs/core": "^2.11.6",
     "aos": "^2.3.4",
     "axios": "^1.1.0",
